--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,9 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-//Image
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+////Image
+//    implementation 'com.github.bumptech.glide:glide:4.11.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 //Network
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -58,8 +58,14 @@ dependencies {
         exclude group: "com.android.support"
     }
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
+
+    //Image
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation ("com.github.bumptech.glide:glide:4.11.0@aar") {
         transitive = true
     }
+
+    // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-simplexml
+    implementation group: 'com.squareup.retrofit2', name: 'converter-simplexml', version: '2.0.0-beta3'
+
 }
