--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,24 +5,22 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsAggregator"
         android:usesCleartextTraffic="true">
-        <activity
-            android:name=".NewsDetailActivity"
-            android:theme="@style/Theme.NewsAggregator.NoActionBar" />
-
-        <activity android:name=".MainActivity">
+        <activity android:name=".ListNewsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".NewsDetailActivity"
+            android:theme="@style/Theme.NewsAggregator.NoActionBar" />
     </application>
 
 </manifest>
