--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+//            debuggable true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -42,10 +43,6 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-////Image
-//    implementation 'com.github.bumptech.glide:glide:4.11.0'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
 //Network
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
@@ -67,5 +64,4 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-simplexml
     implementation group: 'com.squareup.retrofit2', name: 'converter-simplexml', version: '2.0.0-beta3'
-
 }
